[gd_scene load_steps=4 format=3 uid="uid://cehom4rkd6dnh"]

[ext_resource type="Script" uid="uid://c0otbylwioei7" path="res://scripts/grocery_store/grocery_spot.gd" id="1_mmpxj"]
[ext_resource type="Texture2D" uid="uid://ebp0kj008yly" path="res://sprites/E_to_interact.png" id="2_3cynj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88175"]
size = Vector2(200, 200)

[node name="GrocerySpot" type="Node2D"]
script = ExtResource("1_mmpxj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_88175")

[node name="E_Popup" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(0, -89)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_3cynj")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
